--- a/package.json
+++ b/package.json
@@ -1,66 +1,83 @@
 {
   "name": "blacktea024",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "description": "This project was bootstrapped with Create React App.",
   "main": "about.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "update-deprecated": "npm uninstall @babel/plugin-proposal-private-methods @babel/plugin-proposal-numeric-separator @babel/plugin-proposal-class-properties @babel/plugin-proposal-nullish-coalescing-operator rollup-plugin-terser @babel/plugin-proposal-optional-chaining domexception sourcemap-codec workbox-cacheable-response workbox-google-analytics && npm install @babel/plugin-transform-private-methods @babel/plugin-transform-numeric-separator @babel/plugin-transform-class-properties @babel/plugin-transform-nullish-coalescing-operator @rollup/plugin-terser @babel/plugin-transform-optional-chaining && npm audit fix"
+    "postinstall": "node detectdeads.js"
   },
   "dependencies": {
-    "@babel/plugin-transform-async-generator-functions": "^7.24.3",
-    "@babel/plugin-transform-class-properties": "^7.24.1",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
-    "@babel/plugin-transform-numeric-separator": "^7.24.1",
-    "@babel/plugin-transform-object-rest-spread": "^7.24.1",
-    "@babel/plugin-transform-optional-catch-binding": "^7.24.1",
-    "@babel/plugin-transform-optional-chaining": "^7.24.1",
-    "@babel/plugin-transform-private-methods": "^7.24.1",
-    "@babel/plugin-transform-unicode-property-regex": "^7.24.1",
+    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-dynamic-import": "^7.18.6",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@ethereumjs/block": "^5.2.0",
-    "@flechemano/black-tea024": "^1.0.1",
-    "@flechemano/redsnowswap": "^1.2.3",
+    "@hapi/address": "^5.1.1",
+    "@hapi/bourne": "^3.0.0",
+    "@hapi/hoek": "^11.0.4",
+    "@hapi/topo": "^6.0.2",
     "@jridgewell/sourcemap-codec": "^1.4.15",
-    "@nryeah/sunflower": "^1.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "@truffle/hdwallet-provider": "^1.7.0",
+    "@truffle/hdwallet": "^0.1.4",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "abab": "^2.0.6",
-    "babysamo": "^1.2.4",
-    "blackicetea024": "^1.0.1",
-    "blacktea024": "^0.1.6",
-    "blackteaswap024": "^0.0.16",
-    "blackteaufuk2024": "^1.2.3",
-    "bootstrap-tea": "^1.2.3",
-    "boringjobs7652": "^1.2.3",
+    "babel-eslint": "^10.1.0",
+    "brew": "^0.0.8",
+    "chokidar": "^3.6.0",
+    "cids": "^1.1.9",
+    "core-js": "^3.37.0",
+    "domexception": "^4.0.0",
+    "eslint-loader": "^4.0.2",
+    "eth-json-rpc-infura": "^5.1.0",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-block": "^2.2.2",
+    "ethereumjs-common": "^1.5.2",
+    "ethereumjs-tx": "^2.1.2",
     "graceful-fs": "^4.2.11",
     "gulp-util": "^3.0.8",
+    "har-validator": "^5.1.5",
+    "html-webpack-plugin": "^5.6.0",
+    "left-pad": "^1.3.0",
     "minimatch": "^9.0.3",
+    "mkdirp-promise": "^5.0.1",
+    "multibase": "^4.0.6",
+    "multicodec": "^3.2.1",
     "natives": "^1.1.6",
     "nth-check": "^2.1.1",
-    "ontea1": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reet024": "^0.0.6",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "resolve-url": "^0.2.1",
-    "somefreshtea": "^1.2.3",
+    "safe-event-emitter": "^1.0.1",
+    "sane": "^5.0.1",
     "source-map-resolve": "^0.6.0",
-    "source-map-url": "^0.4.1",
     "stable": "^0.1.8",
-    "sunflower2": "^1.2.3",
-    "sunflower22": "^1.2.3",
     "svgo": "^3.2.0",
-    "tea-oss-042": "^1.2.3",
     "test": "^3.3.0",
     "urix": "^0.1.0",
+    "uuid": "^9.0.1",
     "w3c-hr-time": "^1.0.2",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^3.5.2",
     "web3": "^4.6.0",
-    "yeniproje": "^1.2.3"
+    "web3-provider-engine": "^17.0.0",
+    "workbox-google-analytics": "^7.0.0"
   },
   "author": "flechemano",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "figgy-pudding": "^3.5.2",
     "flatten": "^1.0.3",
     "mocha": "^10.1.0",
@@ -68,7 +85,6 @@
     "react-scripts": "^5.0.1",
     "source-map-url": "^0.4.1"
   },
-  "homepage": "https://github.com/flechemano/blacktea024",
   "repository": {
     "type": "git",
     "url": "https://github.com/flechemano/blacktea024"
