--- a/.github/workflows/generator-generic-ossf-slsa3-publish.yml
+++ b/.github/workflows/generator-generic-ossf-slsa3-publish.yml
@@ -44,10 +44,10 @@ jobs:
       #         provenance for.
       #
       # ========================================================
-      - name: Generate subject for provenance
-        id: hash
-        run: |
-          set -euo pipefail
+      #- name: Generate subject for provenance
+       # id: hash
+        # run: |
+          #set -euo pipefail
 
           # List the artifacts the provenance will refer to.
           files=$(ls artifact*)
