--- a/tea.yaml
+++ b/tea.yaml
@@ -8,4 +8,6 @@ codeOwners:
   - '0xCca9547725a44dBE65a096dd64596694586CEB61' #Bo0tstrap
   - '0x56028a0A3a0c26Cb490340f01B1c0eBc5374DEf4'
   - '0x5ED64e57d52b41a714b919C5C2F69116C78F75D8'
+  - '0xFd175c768A38d769c56CD8a733c18EA49C48E074' #flechemano new
+
 quorum: 1
